# ft

./: .gitignore  README.md  pyproject.toml
docs/: index.html
src/phone_ft/: __init__.py  generate_data.py  predict.py  train.py
src/voicemail_clf/: __init__.py  generate_data.py  predict.py  train.py
