[project]
name = "phone-ft"
version = "0.1.0"
description = "A worked example of fine-tuning a small encoder model to extract phone numbers from customer-service notes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.40",
    "datasets>=2.19",
    "torch>=2.2",
    "accelerate>=0.30",
    "seqeval>=1.2.2",
    "numpy>=1.26",
]

# These create the `uv run <name>` commands used throughout the README.
[project.scripts]
generate-data = "phone_ft.generate_data:main"
train = "phone_ft.train:main"
predict = "phone_ft.predict:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phone_ft"]
