[project]
name = "ft-examples"
version = "0.1.0"
description = "Worked examples of fine-tuning small encoder models: phone-number extraction (token classification) and voicemail detection (sequence classification)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.40",
    "datasets>=2.19",
    "torch>=2.2",
    "accelerate>=0.30",
    "seqeval>=1.2.2",
    "numpy>=1.26",
]

# These create the `uv run <name>` commands used throughout the README.
[project.scripts]
# Use case 1 — phone-number extraction (token classification)
phone-generate-data = "phone_ft.generate_data:main"
phone-train = "phone_ft.train:main"
phone-predict = "phone_ft.predict:main"
# Use case 2 — voicemail detection (sequence classification)
vm-generate-data = "voicemail_clf.generate_data:main"
vm-train = "voicemail_clf.train:main"
vm-predict = "voicemail_clf.predict:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phone_ft", "src/voicemail_clf"]
